[gd_scene load_steps=2 format=2]

[ext_resource path="res://Assets/UIs/Shop/ShopUI.gd" type="Script" id=1]

[node name="Shop" type="Control"]
light_mask = 524289
anchor_right = 100.0
script = ExtResource( 1 )

[node name="2x" type="Button" parent="."]
margin_left = 367.0
margin_top = 380.0
margin_right = 551.0
margin_bottom = 440.0
text = "2x"

[node name="Zrusit" type="Button" parent="."]
margin_left = 984.0
margin_top = 24.0
margin_right = 1029.0
margin_bottom = 68.0
text = "X"

[node name="4x" type="Button" parent="."]
margin_left = 582.0
margin_top = 381.0
margin_right = 766.0
margin_bottom = 441.0
text = "4x"

[node name="6x" type="Button" parent="."]
margin_left = 789.0
margin_top = 382.0
margin_right = 973.0
margin_bottom = 442.0
text = "6x"

[node name="125HP" type="Button" parent="."]
margin_left = 369.0
margin_top = 291.0
margin_right = 553.0
margin_bottom = 351.0
text = "125 HP"

[node name="150HP" type="Button" parent="."]
margin_left = 584.0
margin_top = 290.0
margin_right = 768.0
margin_bottom = 350.0
text = "150 HP"

[node name="200HP" type="Button" parent="."]
margin_left = 788.0
margin_top = 292.0
margin_right = 972.0
margin_bottom = 352.0
text = "200 HP"

[node name="Sit1" type="Button" parent="."]
margin_left = 367.0
margin_top = 80.0
margin_right = 551.0
margin_bottom = 140.0
text = "SÃ­t 1"

[node name="Sit2" type="Button" parent="."]
margin_left = 580.0
margin_top = 80.0
margin_right = 764.0
margin_bottom = 140.0

[node name="Sit3" type="Button" parent="."]
margin_left = 788.0
margin_top = 81.0
margin_right = 972.0
margin_bottom = 141.0

[node name="DoubleJ" type="Button" parent="."]
margin_left = 368.0
margin_top = 192.0
margin_right = 552.0
margin_bottom = 252.0
text = "Double Jump"

[node name="Speed" type="Button" parent="."]
margin_left = 577.0
margin_top = 191.0
margin_right = 761.0
margin_bottom = 251.0
text = "Speed +1"

[node name="Wallrun" type="Button" parent="."]
margin_left = 790.0
margin_top = 193.0
margin_right = 974.0
margin_bottom = 253.0
text = "Wallrun"

[connection signal="pressed" from="2x" to="." method="_on_2x_pressed"]
[connection signal="pressed" from="Zrusit" to="." method="_on_Zrusit_pressed"]
[connection signal="pressed" from="4x" to="." method="_on_4x_pressed"]
[connection signal="pressed" from="6x" to="." method="_on_6x_pressed"]
[connection signal="pressed" from="125HP" to="." method="_on_125_pressed"]
[connection signal="pressed" from="150HP" to="." method="_on_150_pressed"]
[connection signal="pressed" from="200HP" to="." method="_on_200_pressed"]
[connection signal="pressed" from="Sit1" to="." method="_on_Sit1_pressed"]
[connection signal="pressed" from="Sit2" to="." method="_on_Sit2_pressed"]
[connection signal="pressed" from="Sit3" to="." method="_on_Sit3_pressed"]
[connection signal="pressed" from="DoubleJ" to="." method="_on_DoubleJ_pressed"]
